use em units for position of gallery image on projectDetailsView so that fixed position at top and doesn't overlap initial text

--- a/css/styles.less
+++ b/css/styles.less
@@ -131,7 +131,7 @@ body {
 
 .projectTitle {
 	cursor: pointer;
-	height: 7em;
+	height: 8em;
 	overflow: hidden;
     padding-bottom: 10px;
     margin-bottom: 0px;
@@ -242,6 +242,17 @@ body {
     opacity : 0; 
     transition: transform 2s ease-in-out, opacity 2s, top 2s;
     transform : scale(0.0,0.0);
+}
+
+.projectDetailsIntroView h2 {
+    font-size: 2em;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+}
+
+.projectDetailsIntroView p {
+	font-size: 1em;
+	margin-bottom: 0.5em;
 }
 
 .projectDetailsView_active .projectDetailsIntroView {
@@ -538,10 +549,11 @@ body {
 	}
 
 	.projectDetailsView_active .projectListView {
-	    transform: scale(1.0, 0.6)  translateY(20%);
+	    transform: scale(1.0, 0.6)  translateY(16em);
 	}
 }
 
+/* Small devices with retina display (tablets, 768px and up) */
 @media (max-width: @screen-md-min) and (min-resolution: 2dppx) {
 	h4, .h4 {
 	    font-size: 8rem;
@@ -577,7 +589,7 @@ body {
 	}
 
 	.projectDetailsView_active .projectListView {
-	    transform: scale(0.7, 0.6) translateY(30%);
+	    transform: scale(0.7, 0.6) translateY(12em);
 	}
 
 	.arrow__individualProjecCarousel {
